<resources>
    <string name="preference_file_key">com.kagiya.roamio.PREFERENCE_FILE_KEY</string>

    <string name="app_name">Roamio</string>


    <!--Onboarding-->
    <string name="onboarding_title_1">Lets explore\nthe world</string>
    <string name="onboarding_description_1">Let\'s explore the world with us with just a few clicks</string>
    <string name="onboarding_button_1">Next</string>
    <string name="onboarding_title_2">Visit tourist\nattactions</string>
    <string name="onboarding_description_2">Find thousands of tourist destinations ready for you to visit</string>
    <string name="onboarding_button_2">Next</string>
    <string name="onboarding_title_3">Get ready for\nnext trip</string>
    <string name="onboarding_description_3">Plan you trip and get the best experience of your life</string>
    <string name="onboarding_button_3">Get Started</string>

    <!--Bottom Menu-->
    <string name="home_menu_button">Home</string>
    <string name="favorites_menu_button">Favorites</string>
    <string name="chat_menu_button">Chat</string>
    <string name="profile_menu_button">Profile</string>

    <!--Home Screen-->
    <string name="search_encouragement">Where do you\nwant to explore today?</string>
    <string name="search_hint">Search destination</string>
    <string name="recommended_label">Recommended places</string>
    
    <!--Place Details Fragment-->
    <string name="show_map">Show map</string>
    <string name="show_more_description">Show more</string>
    <string name="show_less_description">Show less</string>
    <string name="address_title">Address</string>
    <string name="address_road_title">Road</string>
    <string name="address_town_title">Town</string>
    <string name="address_state_title">State</string>
    <string name="address_country_title">Country</string>



    <!--Errors Messages-->
    <string name="connection_or_location_error_message_title">No internet connectivity or wasn\'t able to get your location</string>
    <string name="connection_or_location_error_message">Check your network or your gps settings </string>
</resources>